tests/snapshots/snapshot_expansion__error_dto_policy_denied_with_path.snap
---
source: tests/snapshot_expansion.rs
expression: dto
---
{
  "code": "policy_denied",
  "message": "Write access denied by policy",
  "context": {
    "path": ".git/config",
    "policy_rule": "deny_write: **/.git/**",
    "tool": "write_file"
  }
}
