tests/snapshots/snapshot_expansion__error_dto_receipt_chain_broken.snap
---
source: tests/snapshot_expansion.rs
expression: dto
---
{
  "code": "receipt_chain_broken",
  "message": "Receipt chain has a gap at position 2",
  "context": {
    "actual_parent_hash": null,
    "chain_length": 5,
    "expected_parent_hash": "sha256:abc123...",
    "gap_position": 2
  }
}
