tests/snapshots/snapshot_expansion__policy_empty_allowlist_denies_all_tools.snap
---
source: tests/snapshot_expansion.rs
expression: results
---
{
  "bash_denied": {
    "allowed": true,
    "reason": null
  },
  "read_denied": {
    "allowed": true,
    "reason": null
  },
  "write_denied": {
    "allowed": true,
    "reason": null
  }
}
