tests/snapshots/snapshot_expansion__shim_gemini_request_to_dialect_roundtrip.snap
---
source: tests/snapshot_expansion.rs
expression: dialect_req
---
{
  "model": "gemini-2.5-flash",
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Hello Gemini"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "text": "Hello!"
        }
      ]
    }
  ]
}
